# Masader-Search

./: .gitignore  GUIDELINES.md  datasets.db  evals.json  main.py  pyproject.toml  railway.toml
src/: app.py  app_old.py  appv2.py  db.py  evals.json  evaluate.py  plot.py  rate_limiter.py  schema.py  type_classes.py  utils.py
src/pages/: query_analytics.py  search.py
