[project]
name = "masader-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "datasets==3.6.0",
    "dotenv>=0.9.9",
    "levenshtein==0.27.1",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "rouge-score>=0.1.2",
    "streamlit>=1.28.0",
    "tabulate>=0.9.0",
]
